# advent-of-code

./: .editorconfig  .gitignore  .ocamlformat  dune-project  init.js  init.mjs  package.json  tsconfig.json
2019/01/: solution.ml
2019/02/: solution.ml
2019/03/: dune  solution.ml
2019/04/: solution.ml
2019/05/: dune  solution.ml
2019/06/: dune  solution.ml
2019/07/: dune  solution.ml
2019/08/: solution.ml
2019/09/: solution.ml
2019/10/: solution.ml
2019/11/: dune  solution.ml
2019/12/: dune  solution.ml
2019/13/: dune  solution.ml
2019/14/: dune  solution.ml
2019/15/: dune  solution.ml
2019/16/: solution.ml
2019/17/: dune  solution.ml
2019/18/: solution.ml
2019/19/: dune  solution.ml
2019/20/: solution.ml
2019/21/: solution.ml
2019/22/: solution.ml
2019/23/: dune  solution.ml
2019/24/: solution.ml
2019/25/: dune  solution.ml
2019/computer/: computer.ml  dune
2020/01/: part-1.js  part-2.js
2020/01-hs/: Main  Main.hi  Main.hs
2020/02/: part-1.js  part-2.js
2020/02-hs/: Main  Main.hi  Main.hs
2020/03/: part-1.js  part-2.js
2020/03-hs/: Main  Main.hi  Main.hs
2020/04-hs/: Main  Main.hi  Main.hs  Works  Works.hi  Works.hs
2020/05-hs/: Main  Main.hi  Main.hs
2020/06-hs/: Main  Main.hi  Main.hs
2020/07-hs/: Main.hs
2022/: .gitignore  2022.install  2022.opam  dune-project
2022/01/: solution.fsx  solution.ml
2022/02/: solution.fsx  solution.ml
2022/03/: solution.fsx  solution.ml
2022/04/: solution.fsx  solution.ml
2022/05/: solution.fsx
2022/06/: solution.fsx
2022/07/: solution.fsx  solution.ml
2022/08/: solution.fsx
2022/09/: solution.fsx
2022/10/: dune  solution.fsx  solution.ml
2022/11/: dune  monkey.ml  solution.ml
2022/12/: dune  solution.ml
2022/13/: dune  solution.ml
2022/14/: dune  solution.ml
2022/15/: solution.ml
2022/16/: dune  solution.ml
2022/17/: solution.ml
2022/18/: solution.ml
2022/19/: dune  solution.ml
2022/20/: dune  solution.fsx  solution.ml
2022/21/: solution.ml
2022/22/: solution.ml
2022/23/: dune  solution.ml
2022/24/: dune  solution.ml
2022/25/: solution.ml
2023/03/: dune  graph.ml  simple.ml  solution.ml
2024/09/: dune  simple.ml  solution.ml
elixir/: aoc  mix.exs
lib/: aoc.ml  dune  func.ml  heap.ml  list.ml  performance.ml  point.ml  runner.ml  stopwatch.ml
(+126 files in other folders)
