(lang dune 3.6)

(name 2022)

(generate_opam_files true)

(source
 (github nordfjord/advent-of-code))

(authors "Einar Nordfjord")

(maintainers "Einar Nordfjord")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name 2022)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
