(executable
 (name solution)
 (libraries str)
 (preprocess (pps ppx_deriving.show))
 (modules solution))

(executable
 (name simple)
 (libraries str)
 (preprocess (pps ppx_deriving.show))
 (modules simple))

(executable
 (name graph)
 (libraries str ocamlgraph)
 (preprocess (pps ppx_deriving.show))
 (modules graph))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
